# aoc

./: CONTEXT.md  Cargo.toml  README.md  config.json
2023/rust/src/day2/: mod.rs
2023/src/: main.rs
2023/src/day3/: mod.rs
2024/day_1/: main.exs  main.go
2024/day_2/: main.exs
2024/day_3/: main.exs
2024/day_4/: main.exs
2024/day_5/: main.go
2024/day_6/: main.go
2024/day_6/bck_1/: main.go
2025/: Cargo.toml
2025--/: mise.toml
2025--/src/day_1/: main.rs
2025--/src/day_3/: main.rs
2025/01/: Cargo.toml  run.rs
2025/02/: Cargo.toml  run.rs
2025/03/: Cargo.toml  run.rs
2025/src/: main.rs
2025/src/day_2/: main.rs
aoc-cli/: mise.toml
aoc-cli/src/: app.rs  main.rs
rust/: Cargo.toml
rust/src/: day1.rs  main.rs
rust/src/day1/: d1_p1.rs  d1_p2.rs  main.rs  mod.rs
rust/src/day2/: main.rs  mod.rs
rust/src/day3/: main.rs  mod.rs
rust/src/day4/: mod.rs
src/: app.rs
