[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d1p1"
path = "src/day1/d1_p1.rs"

[[bin]]
name = "d1p2"
path = "src/day1/d1_p2.rs"

[[bin]]
name = "d2"
path = "src/day2/main.rs"


[dependencies]
